# CMake-Template

./: CMakeLists.txt  README.md
src/: AVLTree.cpp  AVLTree.h  main.cpp
tests/: custom_tests.hpp  flora_test.hpp  tests.cpp
